ConfigMap using Nginx configuration file.yml
apiVersion: v1
kind: Pod
metadata:
    name: nginxpod
spec:
   containers:
     - image: nginx
       name: nginxcontainer
       ports: 
         - containerPort: 80
       volumeMounts: 
          - name: configmapvolume
            mountPath: /etc/nginx/conf.d       # you will mount the nginxconfigmap to this directory
   volumes:
      - name: configmapvolume
        configMap:
           name: nginxconfigmap         # name of your configuration file you copied and saved in host
