NginxPod.yml
apiVersion: v1
kind: Pod
metadata:
    name: mynginxpod
spec:
   containers:
    - image: nginx
      name: mynginxcontainer
      ports:
       - containerPort: 80
