Secret using MySQL.yml
apiVersion: v1
kind: Pod
metadata:
   name: mysqlpod1
spec:
   containers:
    - image: mysql
      name: mysqlcontainer
      ports:
        - containerPort: 3306
