Secret using Nginx.yml
apiVersion: v1
kind: Pod
metadata:
   name: mynginxpod1
spec:
   imagePullSecrets:
    - name: mydockerhubsecret
   containers:
    - image: devopsbaby/mynginx
      name: mynginxcontainer
      ports:
        - containerPort: 80
      volumeMounts:
           - name: myconfigvolume
             mountPath: /etc/nginx/conf.d/
   volumes:
        - name: myconfigvolume
          configMap:
                 name: mynginxconf              #do all the steps as configmap and also image should be in dockerhub
