StatefulSet with volume, secret, PV and PVC.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
     name: mysfpod
spec:
  replicas: 5
  selector:
      matchLabels:
        app: development
  template:
    metadata:
       labels:
         app: development
    spec:
     containers:
           - image: mysql
             name: mysqlcontainer
             ports:
               - containerPort: 3306
             volumeMounts:
               - name: mysqlstorage                             
                 mountPath: /var/lib/mysql                      #create directory
  volumeClaimTemplates:                                         #create persistant volume as well
            - metadata:
                name: mysqlstorage
              spec:
                accessModes: ["ReadWriteOnce"]
                resources:
                      requests:
                         storage: 2Gi
