Volume(emptyDir).yml
apiVersion: v1
kind: Pod
metadata:
   name: emptywalappod
spec:
   containers:
      - image: nginx
        name: ngcontainer
        volumeMounts:
              - name: htmlfolder
                mountPath: /usr/share/nginx/html
   volumes:
    - name: htmlfolder
      emptyDir: {}

      # if you want to create emptyDir in RAM memory
      # emptyDir:
      #     medium: Memory
