Volume(gitRepo).yml
apiVersion: v1
kind: Pod
metadata:
   name: gitrepowalappod
spec:
   containers:
      - image: nginx
        name: ngcontainer
        volumeMounts:
              - name: htmlfolder
                mountPath: /usr/share/nginx/html
                readOnly: true
        ports:
         - containerPort: 80
           protocol: TCP
   volumes:
    - name: htmlfolder
      gitRepo:
        repository: repo URL
        revision: master
        directory: .
