ManualEndpoints(mapping IP with Ports).yml
apiVersion: v1
kind: Endpoints
metadata:
   name: myservice
subsets:
   - addresses:
      - ip: 113.13.13.13
      - ip: 115.15.15.15
ports:
      - port: 80
