Service(ExternalName).yml
apiVersion: v1
kind: Service
metadata:
   name: exiternal-service
spec:
   type: ExternalName
   externalName: website.in
   ports:
    - port: 80
