Service(NodePort).yml
apiVersion: v1
kind: Service
metadata:
   name: mynodeportservice
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
      app: development
