Service(clusterIP).yml
apiVersion: v1
kind: Service
metadata:
   name: myservice
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
      env: live
