Service(clusterIP)multiportwithreplicaset.yml
apiVersion: v1
kind: Service
metadata:
   name: myservice
spec:
  sessionAffinity: ClientIP
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
      app: development
