Secret (tls cert) using Ingress, Nodeport.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  tls:
   - hosts:
      - oleoleapp.in                 #domain name
     secretName: mytlssecret           #secret name 
  rules:
   - host: oleoleapp.in                #domain name
     http:
       paths:
        - path: /
          pathType: Prefix
          backend:
           service:
             name: test
             port:
               number: 80               
    # write service nodeport or loadbalancer
